; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/firewire/extr_fwohci.c_fwohci_start_ats.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/firewire/extr_fwohci.c_fwohci_start_ats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.firewire_comm = type { i32 }
%struct.fwohci_softc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.firewire_comm*)* @fwohci_start_ats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fwohci_start_ats(%struct.firewire_comm* %0) #0 {
  %2 = alloca %struct.firewire_comm*, align 8
  %3 = alloca %struct.fwohci_softc*, align 8
  store %struct.firewire_comm* %0, %struct.firewire_comm** %2, align 8
  %4 = load %struct.firewire_comm*, %struct.firewire_comm** %2, align 8
  %5 = bitcast %struct.firewire_comm* %4 to %struct.fwohci_softc*
  store %struct.fwohci_softc* %5, %struct.fwohci_softc** %3, align 8
  %6 = load %struct.fwohci_softc*, %struct.fwohci_softc** %3, align 8
  %7 = getelementptr inbounds %struct.fwohci_softc, %struct.fwohci_softc* %6, i32 0, i32 0
  %8 = call i32 @FW_GLOCK(i32* %7)
  %9 = load %struct.fwohci_softc*, %struct.fwohci_softc** %3, align 8
  %10 = load %struct.fwohci_softc*, %struct.fwohci_softc** %3, align 8
  %11 = getelementptr inbounds %struct.fwohci_softc, %struct.fwohci_softc* %10, i32 0, i32 1
  %12 = call i32 @fwohci_start(%struct.fwohci_softc* %9, i32* %11)
  %13 = load %struct.fwohci_softc*, %struct.fwohci_softc** %3, align 8
  %14 = getelementptr inbounds %struct.fwohci_softc, %struct.fwohci_softc* %13, i32 0, i32 0
  %15 = call i32 @FW_GUNLOCK(i32* %14)
  ret void
}

declare dso_local i32 @FW_GLOCK(i32*) #1

declare dso_local i32 @fwohci_start(%struct.fwohci_softc*, i32*) #1

declare dso_local i32 @FW_GUNLOCK(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
